--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "inconnu-xd",
   "version": "1.0.0",
-  "description": "INCONNU XD - Chatbot AI développé par INCONNU BOY",
+  "description": "INCONNU XD - Chatbot IA développé par INCONNU BOY",
   "main": "server.js",
   "type": "module",
   "scripts": {
